# Rust-CLI-Fileshare

./: Cargo.toml  README.md
src/: main.rs
