[package]
name = "cli_fileshare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
reqwest = { version = "0.11.23", features = ["multipart", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0" 
tokio = { version = "1.35.1", features = ["full"]}
copypasta = "0.10.0"
